@@ -4,6 +4,7 @@ Version 3.xxx (August xxth 2017)
 - Floorplan: Fixed door contact type
 - Changed: OZW, added FGS 213/223 with id 2000/3000 as binary switch
 - Implemented: "Send Triggers to IFTTT" from lua using commandArray['TriggerIFTTT']='EventName#Value1#Value2#Value3'
+- Changed: MySensors, now treating V_LIGHT_LEVEL as Perecentage (V_LEVEL with type=S_LIGHT_LEVEL = Lux)
 
 Version 3.8153 (July 30th 2017)
 - Fixed: Camera Editor, will now always refresh thumbnail in table
